--- a/public/src/index.css
+++ b/public/src/index.css
@@ -17,3 +17,7 @@ body {
   max-width: 100vw;
   overflow: hidden;
 }
+
+.Toastify__toast-theme--dark {
+  background-color: #00000076 !important;
+}
